deploy/eks/deployment_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: qa
  name: fanclash-api
  labels:
    app: fanclash-api
    purpose: api
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "fanclash-api"
    tags.datadoghq.com/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fanclash-api
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fanclash-api
        purpose: api
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "fanclash-api"
        tags.datadoghq.com/version: "latest"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - mobile-api
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: fanclash-api
          image: 826737140156.dkr.ecr.us-east-1.amazonaws.com/fanclash-api:latest
          # This setting makes nodes pull the docker image every time before starting the pod. This is useful when debugging, 
          # but should be turned off in production.
          #imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
